syntax = "proto3";
package  go_micro_services;

import "google/protobuf/timestamp.proto";

option go_package = "pb/category";


service CategoryService{
  rpc GetCategoryById(ByIdCategory) returns (CategoryResponse);
  rpc UpdateCategory(RequestUpdate) returns (CategoryResponse);
  rpc CreateCategory(RequestCreate) returns (CategoryResponse);
  rpc DeleteCategory(ByIdCategory) returns (CategoryResponse);
  rpc ListCategorys(emptyCategory) returns (CategoryResponseRepeated);
}

message Category {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message ByIdCategory {
  string id=1;
}
message emptyCategory {}

message CategoryResponse{
  int64 code=1;
  string message=2;
  Category data=3;
}
message CategoryResponseRepeated{
  int64 code=1;
  string message=2;
  repeated Category data=3;
}
message RequestUpdate{
  string id=1;
  optional string name=2;
}
message RequestCreate{
  string name=1;
}